# bitcoin-core-node-app

./: .gitignore  README.md  docker-compose.yaml
backend/: Dockerfile  pyproject.toml
backend/app/: .env.template  main.py
backend/app/alembic/: README
backend/app/alembic/versions/: 2024_10_07_1214-3d39faa3010d_create_transaction_table.py
backend/app/api/: __init__.py
backend/app/api/api_v1/: __init__.py  bitcoin_block.py  bitcoin_info.py  bitcoin_transaction.py  bitcoin_wallet.py
backend/app/bitcoin_adapter/: helper.py  info_service.py  rpc_helper.py  transaction.py  utility.py  wallet.py  wallet_service.py
backend/app/bitcoin_adapter/utils/: __init__.py  calculator.py
backend/app/core/: config.py
backend/app/core/models/: __init__.py  transaction.py
backend/app/core/schemas/: info.py  transaction.py  wallet.py
backend/app/core/services/: fee_service.py  helper_service.py  info_service.py  transaction_service.py  wallet_service.py
backend/app/utils/: __init__.py
