[tool.poetry]
name = "bitcoin-info-backend"
version = "0.1.0"
description = "Connecting to a Bitcoin Core node"
authors = ["Vitalii"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "0.112.0"
uvicorn = "0.30.6"
envparse = "0.2.0"
pydentic = {extras = ["email"], version = "^0.0.1.dev3"}
pydantic-settings = "^2.4.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.32"}
asyncpg = "^0.29.0"
alembic = "^1.13.2"
bitcoinlib = "^0.6.15"
bitcoinrpc = "^0.7.0"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.2"
requests = "^2.32.3"
httpx = "^0.27.0"
pytest-asyncio = "^0.23.8"

[tool.pytest.ini_options]
pythonpath = "app"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
